deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: firstapp
  template:
    metadata:
      labels:
        app: firstapp
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
           - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: secondapp
  template:
    metadata:
      labels:
        app: secondapp
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: first-service
  labels:
    app: firstapp
spec:
  selector:
    app: firstapp
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: second-service
  labels:
    app: secondapp
spec:
  selector:
    app: secondapp
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: apps-ingress
spec:
  rules:
    - host: myhost.com
      http:
        paths:
          - pathType: Prefix
            path: "/anything"
            backend:
              service:i
                name: first-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/uuid"
            backend:
              service:
                name: second-service
                port:
                  number: 80
